--- a/client/style.css
+++ b/client/style.css
@@ -3,32 +3,77 @@ html, body {
   width: 100%;
   margin: 0;
   padding: 0;
+    background-color: #30033e;
+    color: white;
+    font-family: Oxygen, Arial, sans-serif;
 }
+
+/*-----HEADING-----*/
+#heading {
+    text-align: center;
+    margin: auto;
+}
+
+#heading h3 {
+    font-size: 3em;
+    margin-bottom: 5px;
+    margin-top: 30px;
+    font-family: Orbitron, monospace, sans-serif;
+    color: #ddd0e6;
+}
+
+#heading h4 {
+    font-size: 1.5em;
+    margin-top: 15px;
+    font-family: Oxygen, Arial, sans-serif;
+}
+
+/*-----CONTAINER-----*/
+#container {
+    display: flex;
+    flex-direction: row;
+}
+
+/*----FORM-----*/
 
 #form {
-  text-align: center;
-  margin: 0 auto;
+    flex-grow: 1;
+    text-align: center;
+    background-color: #ddd0e6;
+    color: #77569c;
+    padding: 2%;
+    border-radius: 10px;
+    width: 10%;
+    margin: 1% 2.5%;
 }
 
-#form h1 {
-  font-size: 2em;
+input {
+    width: 70%;
+    border-radius: 20px;
+    margin: 2%;
+    border: 1px solid white;
+    color: #77569c;
 }
+
+input[type=submit] {
+    border-radius:10px;
+    padding: 5px;
+    width: 38%;
+    background-color: white;
+    color: #30033e;
+    font-family: oxygen, arial, sans-serif;
+    font-size: 1em;
+}
+
+input[type=submit]:hover{
+    background-color: #77569c;
+    color: white;
+}
+
+/*-----BODY=----*/
 
 #content {
-  margin-top: 20px;
-  font-size: 2em;
-  text-align: center;
-}
-
-#display {
-    background-color: #9147ff;  
-    height: 50px;
-    color: lightgrey;
-    text-align: center;
-    margin: 20px auto;
-    font-size: 2em;
-}
-    
-input {
-    width: 300px;
+    flex-grow: 10;
+    background-color: #9147ff;
+    color: white;
 }
