--- a/client/style.css
+++ b/client/style.css
@@ -1,8 +1,6 @@
 html, body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
     background-color: #30033e;
     color: white;
     font-family: Oxygen, Arial, sans-serif;
@@ -45,6 +43,7 @@ html, body {
     border-radius: 10px;
     width: 10%;
     margin: 1% 2.5%;
+    height: 48%;
 }
 
 input {
@@ -74,6 +73,43 @@ input[type=submit]:hover{
 
 #content {
     flex-grow: 10;
-    background-color: #9147ff;
+    background-color: #77569c;
     color: white;
+    margin: 1% 2.5%;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.contentTitle {
+    margin: 1% 2%
+}
+
+#next {
+    background-color: rgba(250,250,250,0.75);
+    color: #30033e;
+    padding: 10px 50px;
+    border-radius: 10px;
+}
+
+.streamLink {
+    font-size: 1.5em;
+    margin: 1% 0%;
+}
+
+.streamInfo {
+    font-style: oblique;
+    font-size: 1em;
+}
+
+#upcoming {
+    background-color: rgba(250,250,250,0.75);
+    color: #30033e;
+    padding: 10px 50px;
+    border-radius: 10px;
+    margin-bottom: 1.5%;
+}
+
+hr {
+    border: 2px solid #77569c;
+    border-radius: 5px;
 }
